--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Moritz Valentino Matzner
 logo: /assets/img/logo.png
-description: Datenjournalist
+description: Datajournalist
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
